--- a/game.css
+++ b/game.css
@@ -15,25 +15,55 @@ img
 {
 	width: 100%;
     height: 100%;
-    display: block; /* Removes default image inline spacing */
-    object-fit: cover; /* Ensures the image covers the cell without distorting aspect ratio */
+    display: block; 
+    object-fit: cover;
 }
 
 td {
-    width: 25%; /* 4 columns, hence 25% width each */
-    height: 20%; /* 4 rows, hence 25% height each */
+    width: 25%; 
+    height: 20%; 
     padding: 0;
     border: 1px solid black;
 }
 
 button {
-    background-color: #4CAF50; /* Green background */
+    background-color: #4CAF50; 
     border: none;
     color: white;
     padding: 15px 32px;
     text-align: center;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
-    border-radius: 8px; /* Rounded corners */
+    margin: 4px 12px;
+    border-radius: 8px; 
+}
+
+#btn_back2
+{
+	width: 300px;
+}
+
+#div_jeopardy
+{
+	text-align: center;
+}
+
+#div_tof
+{
+	text-align: center;
+}
+
+#div_main
+{
+	text-align: center;
+}
+
+#txt_info
+{
+	font-size: 30px;
+}
+
+#txt_info_h
+{
+	font-size: 60px;
 }
