--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ button {
     padding: 15px 32px;
     text-align: center;
     display: inline-block;
-    font-size: 16px;
+    font-size: 40px;
     margin: 4px 12px;
     border-radius: 8px; 
 }
@@ -18,4 +18,9 @@ button {
 #div_main
 {
 	text-align: center;
+}
+
+#title 
+{
+	font-size: 120px;
 }
